tests/unit/language/policy/errors/policy_uses_undefined_rejected.arche
// E0213: a `policy` is the safety mechanism, so it may NOT opt out of safety with `!undefined` (a raw,
// unchecked op that can read out of bounds). Banned in any policy body, independent of --no-undefined.
// (Unprovable-but-TOTAL accesses — e.g. a pool eviction handler's clamped column scan — stay allowed;
// only the raw opt-out is rejected.)
// RUN: %arche build -o %t %s > %t.out 2>&1 ; grep -qiF "must stay total" %t.out
scratch: int[2]

@policy (bounds) leaky :: policy (len: int, i: int) {
  z := scratch[i] !undefined; // raw op inside a policy → E0213
  if (i >= len) {
    i = z;
  }
}

main :: proc() {
  a: int[4];
  j  := 9;
  _x := a[j] !leaky;
}
